--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ sentence-transformers>=2.5.1
 transformers>=4.37.2
 torch>=2.1.0  # Required for HuggingFace models
 tiktoken>=0.5.2         # For text splitting
+rank_bm25>=0.2.2       # For BM25 search
 
 # Testing
 pytest>=8.0.0
