--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.15.2",
     "@mantine/hooks": "^7.15.2",
-    "@tabler/icons-react": "^2.47.0",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@tabler/icons-react": "^3.26.0",
+    "@tanstack/react-query": "^5.62.11",
+    "axios": "^1.7.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "postcss": "^8.4.33",
-    "postcss-preset-mantine": "^1.12.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11"
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.6"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
