--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ uvicorn>=0.27.0
 sqlalchemy>=2.0.25
 pydantic>=2.6.1
 python-dotenv>=1.0.0
+openai>=1.0.0  # Added for OpenAI API
 
 # Database
 psycopg2-binary>=2.9.9  # For PostgreSQL
